; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libgeom/extr_geom_util.c_g_mediasize.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libgeom/extr_geom_util.c_g_mediasize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DIOCGMEDIASIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @g_mediasize(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @DIOCGMEDIASIZE, align 4
  %6 = call i32 @g_ioctl_arg(i32 %4, i32 %5, i32* %3)
  %7 = icmp eq i32 %6, -1
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i32 -1, i32* %3, align 4
  br label %9

9:                                                ; preds = %8, %1
  %10 = load i32, i32* %3, align 4
  ret i32 %10
}

declare dso_local i32 @g_ioctl_arg(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
